--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -6,9 +6,7 @@ on:
       branches:
         - main
   schedule:
-    # 테스트를 원한다면, `한국 표준시 = UTC + 9` 참고해서 시간 수정한 후 테스트해보기
-    - cron: '*/1 * * * *'
-    - cron: '0 15 * * *' # 매일 자정에 실행, 한국 시간 기준 (UTC 15:00)
+    - cron: '0 15 * * *'
 
 jobs:
   update_blog:
